<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/search_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toTopOf="@+id/mainactivity_fragment_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_search_24" />

    <EditText
        android:id="@+id/search_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/mainactivity_fragment_layout"
        app:layout_constraintEnd_toStartOf="@+id/current_online_status_tv"
        app:layout_constraintStart_toEndOf="@+id/search_iv"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="Введите текст..." />

    <TextView
        android:id="@+id/current_online_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:enabled="false"
        android:text="ОТКЛЮЧЕНО"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/mainactivity_fragment_layout"
        app:layout_constraintEnd_toStartOf="@+id/current_time_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="--:--"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/mainactivity_fragment_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/br_imgv"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="69dp"
        android:background="#2F000000"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/prodactivity_columncolor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainactivity_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/CheckVersionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:onClick="onClick"
            android:text="CheckVersion"
            app:layout_constraintBottom_toBottomOf="@+id/CartButton"
            app:layout_constraintStart_toEndOf="@+id/CartButton" />

        <Button
            android:id="@+id/CheckVersionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:onClick="onClick"
            android:text="CheckVersion2"
            app:layout_constraintBottom_toBottomOf="@+id/SettingsButton"
            app:layout_constraintEnd_toStartOf="@+id/SettingsButton" />

        <ImageButton
            android:id="@+id/SettingsButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#2196F3"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FramedLayout"
            app:srcCompat="@android:drawable/ic_menu_preferences" />

        <ImageButton
            android:id="@+id/CartButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="#2196F3"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FramedLayout"
            app:srcCompat="@drawable/ic_shopping_cart" />

        <FrameLayout
            android:id="@+id/FramedLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="200dp"
            android:gravity="center|top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/ProductsButton"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="#8BC34A"
                android:onClick="onClick"
                android:text="@string/ProductsItemList"
                android:textSize="30sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/AlcoholButton"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="#8BC34A"
                android:onClick="onClick"
                android:text="@string/AlcoholItemList"
                android:textSize="30sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/ServicesButton"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="#8BC34A"
                android:onClick="onClick"
                android:text="@string/ServicesList"
                android:textSize="30sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/FavoritesButton"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:layout_gravity="bottom|start"
                android:backgroundTint="#FFEB3B"
                android:onClick="onClick"
                android:text="@string/FavoritesList"
                android:textSize="30sp"
                android:visibility="visible" />


            <Button
                android:id="@+id/TaxiButton"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:layout_gravity="bottom|center"
                android:backgroundTint="#8BC34A"
                android:onClick="onClick"
                android:text="@string/Taxi"
                android:textSize="30sp"
                android:visibility="visible" />


            <Button
                android:id="@+id/ForAnimalsButton"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#8BC34A"
                android:onClick="onClick"
                android:text="@string/ForAnimalsItemList"
                android:textSize="30sp"
                android:visibility="visible" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>